email sent alignment fix

--- a/packages/core/src/sass/app/modules/cashier.scss
+++ b/packages/core/src/sass/app/modules/cashier.scss
@@ -298,7 +298,8 @@
     }
     &__email {
         &-sent {
-            width: 40rem;
+            max-width: 40rem;
+            width: 100%;
             margin: auto;
 
             &-title {
